--- a/main.html
+++ b/main.html
@@ -2,14 +2,10 @@
 
 <html>
 
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	
+    <h1><b>Welcome to Accio Jobs!</b></h1>
 
 </body>
 
